[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Enemies/EnemyTemplate.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Gun/Bullets/Enemy_Standard_Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Characters/Toptero/Sprites/Toptero_Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/Characters/Toptero/Sprites/Toptero_Sheet_n.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=9]
radius = 18.0

[sub_resource type="CircleShape2D" id=7]
radius = 80.0

[sub_resource type="CircleShape2D" id=8]
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rest"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]

[node name="EnemyTemplate" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 387
script = ExtResource( 1 )
bullet = ExtResource( 2 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="Sprite_Enemy" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Sprite_Enemy"]
rotation = -1.5708
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )
offset = Vector2( -2, 0 )
vframes = 3
hframes = 10

[node name="Aiming" type="Area2D" parent="Sprite_Enemy"]
collision_layer = 0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sprite_Enemy/Aiming"]
position = Vector2( 152.01, 0 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Sprite_Enemy/Aiming"]
position = Vector2( 74.21, 0 )
rotation = 1.5708
shape = SubResource( 8 )
disabled = true

[node name="EffectAnimation" type="AnimationPlayer" parent="Sprite_Enemy"]
anims/Damage = SubResource( 2 )
anims/Rest = SubResource( 3 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 4 )
disabled = true

[node name="PerceptibleRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptibleRadius"]
shape = SubResource( 5 )
disabled = true

[node name="Turret" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Turret"]
rotation = -1.5708
texture = ExtResource( 3 )
offset = Vector2( -2, 16 )
vframes = 3
hframes = 10
frame = 20

[node name="Muzzle" type="Position2D" parent="Turret/Sprite"]
position = Vector2( 0, 30 )

[node name="TurretStream" type="AudioStreamPlayer2D" parent="Turret"]
[connection signal="body_entered" from="Sprite_Enemy/Aiming" to="." method="_on_Aiming_body_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="PerceptibleRadius" to="." method="_on_PerceptibleRadius_body_exited"]
